Fixed alignment issues + open all linking.

--- a/src/components/EventCard/styles.scss
+++ b/src/components/EventCard/styles.scss
@@ -76,6 +76,7 @@
           text-decoration: none;
           position: absolute;
           top: 0;
+          cursor: pointer;
         }
         a:hover {
           text-decoration: underline;
